--- a/infrastructure/website/templates/index.html.hbs
+++ b/infrastructure/website/templates/index.html.hbs
@@ -13,11 +13,11 @@
 <body>
   <div 
       hx-headers='{"accept": "text/html"}'
-      hx-get="https://u1x70nj9t5.execute-api.eu-central-1.amazonaws.com/v1/strikes" 
+      hx-get="https://{{ rest_api_id }}.execute-api.eu-central-1.amazonaws.com/v1/strikes" 
       hx-trigger="load"
       hx-swap-oob="innerHTML:#content">
-  </div>
-  <div hx-ext="ws" ws-connect="wss://xeoyj9uj81.execute-api.eu-central-1.amazonaws.com/v1">
+  </divt
+  <div hx-ext="ws" ws-connect="wss://{{ websocket_api_id }}.execute-api.eu-central-1.amazonaws.com/v1">
   </div>
   <div id="content"></div>
 </body>
