--- a/infrastructure/website/templates/index.html.hbs
+++ b/infrastructure/website/templates/index.html.hbs
@@ -13,11 +13,11 @@
 <body>
   <div 
       hx-headers='{"accept": "text/html"}'
-      hx-get="https://mtsmqwaz00.execute-api.eu-central-1.amazonaws.com/v1/strikes" 
+      hx-get="https://{{restApiId}}.execute-api.eu-central-1.amazonaws.com/v1/strikes" 
       hx-trigger="load"
       hx-swap-oob="innerHTML:#content">
   </div>
-  <div hx-ext="ws" ws-connect="wss://eyx5jmt9mf.execute-api.eu-central-1.amazonaws.com/v1">
+    <div hx-ext="ws" ws-connect="wss://{{websocketApiId}}.execute-api.eu-central-1.amazonaws.com/v1">
   </div>
   <div id="content"></div>
 </body>
